# docs/swagger.yaml
@@ -1,6 +1,21 @@
-basePath: /api/v1
 definitions:
-  entity.User:
+  handler.errorResponse:
+    properties:
+      error:
+        type: string
+    type: object
+  user.CreateRequest:
+    properties:
+      email:
+        type: string
+      first_name:
+        type: string
+      last_name:
+        type: string
+      username:
+        type: string
+    type: object
+  user.Model:
     properties:
       created_at:
         type: string
@@ -17,12 +32,7 @@ definitions:
       username:
         type: string
     type: object
-  handler.errorResponse:
-    properties:
-      error:
-        type: string
-    type: object
-  handler.userCreateRequest:
+  user.UpdateRequest:
     properties:
       email:
         type: string
@@ -33,30 +43,8 @@ definitions:
       username:
         type: string
     type: object
-  handler.userUpdateRequest:
-    properties:
-      email:
-        type: string
-      first_name:
-        type: string
-      last_name:
-        type: string
-      username:
-        type: string
-    type: object
-host: localhost:8080
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: REST API for user management
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: User API
-  version: "1.0"
+  contact: {}
 paths:
   /users:
     get:
@@ -68,7 +56,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/entity.User'
+              $ref: '#/definitions/user.Model'
             type: array
         "500":
           description: Internal Server Error
@@ -87,14 +75,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/handler.userCreateRequest'
+          $ref: '#/definitions/user.CreateRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/entity.User'
+            $ref: '#/definitions/user.Model'
         "400":
           description: Bad Request
           schema:
@@ -149,7 +137,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.User'
+            $ref: '#/definitions/user.Model'
         "400":
           description: Bad Request
           schema:
@@ -180,14 +168,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/handler.userUpdateRequest'
+          $ref: '#/definitions/user.UpdateRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.User'
+            $ref: '#/definitions/user.Model'
         "400":
           description: Bad Request
           schema:
@@ -203,6 +191,4 @@ paths:
       summary: Update a user
       tags:
       - users
-schemes:
-- http
 swagger: "2.0"
